--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "php": "^7.3.0",
         "sierratecnologia/crypto": "dev-master",
         "sierratecnologia/integrations": "dev-master",
+        "sierratecnologia/telefonica": "dev-master",
         "deployer/deployer": ">=6.4",
         "vanderlee/php-sentence": ">=1.0",
         "fzaninotto/faker": "*",
