--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "require": {
         "php": "^7.3.0",
         "sierratecnologia/crypto":          "dev-master",
+        "sierratecnologia/operador": "dev-master",
         "sierratecnologia/integrations":    "dev-master",
         "sierratecnologia/telefonica":      "dev-master",
         "deployer/deployer":            ">=6.4",
