--- a/composer.json
+++ b/composer.json
@@ -23,18 +23,10 @@
     ],
     "require": {
         "php": "^7.3.0",
-        "sierratecnologia/crypto":          "dev-master",
-        "sierratecnologia/operador": "dev-master",
         "sierratecnologia/integrations":    "dev-master",
-        "sierratecnologia/telefonica":      "dev-master",
         "deployer/deployer":            ">=6.4",
-        "vanderlee/php-sentence":       ">=1.0",
-        "fzaninotto/faker":             "*",
-        "php-http/guzzle6-adapter":     "*",
-        "devio/pipedrive":              "*",
-        "league/flysystem-aws-s3-v3":   "*",
-        "league/plates":                "^3.1|^4.0|^5.0",
-        "geerlingguy/ping":             "*",
+        "privatejustice/socrates": "dev-master",
+        "sierratecnologia/muleta": "dev-master",
         "phpbench/phpbench":            "*",
         "phploc/phploc":                "*",
         "phpmd/phpmd":                  "*",
