--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,8 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
+        "illuminate/support": "^7.0 || ^8.0",
+        "illuminate/database": "^7.0 || ^8.0",
         "sierratecnologia/integrations":    "dev-master",
         "sierratecnologia/operador":    "dev-master",
         "deployer/deployer":            "^6.8",
@@ -31,9 +33,12 @@
         "gitonomy/gitlib":              "^1.2"
     },
     "require-dev": {
-        "behat/behat":                   ">=2.5",
-        "phpunit/phpunit": "^8.0|^9.0|^10.0",
-        "phpro/grumphp": "^1.3"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "orchestra/testbench": "^5.0|^6.0",
+        "phpunit/phpunit": "^9.3",
+        "psalm/plugin-laravel": "^1.5",
+        "vimeo/psalm": "^4.0",
+        "phpro/grumphp": ">=1.3"
     },
     "suggest": {
         "leafo/lessphp":                ">=0.4",
@@ -55,6 +60,10 @@
         }
     },
     "scripts": {
+        "psalm": "vendor/bin/psalm",
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
         "post-install-cmd": [
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
