--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "deployer/deployer":            "^6.8",
         "guzzlehttp/guzzle": "^6.0|^7.0|^8.0",
         "sierratecnologia/muleta":      "dev-master",
-        "gitonomy/gitlib":              "^1.2"
+        "gitonomy/gitlib":              "^1.2",
+        "http-interop/http-factory-guzzle": "^1.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
@@ -77,7 +78,11 @@
     },
     "repositories": [{"type": "path","url":"../**","options":{"symlink": true}}],
     "config": {
-        "bin-dir": "bin"
+        "bin-dir": "bin",
+        "allow-plugins": {
+            "phpro/grumphp": true,
+            "php-http/discovery": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
